# ChangeLog for x11-misc/imake
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/imake/ChangeLog,v 1.26 2007/02/04 18:11:02 joshuabaergen Exp $

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org> imake-1.0.2.ebuild:
  Drop mirroring restriction. Thanks to Zhang Le of bug #163088.

  11 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; imake-1.0.2.ebuild:
  Update description to be less generic.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> imake-1.0.2.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> imake-1.0.2.ebuild:
  Mark 1.0.2 stable on ia64

  03 Jul 2006; Joshua Baergen <joshuabaergen@gentoo.org> imake-1.0.2.ebuild:
  Restrict mirroring since tarball changed upstream.  (Bug #139011, reported by
  Dick Repasky)

  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; imake-1.0.2.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> imake-1.0.2.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> imake-1.0.2.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; imake-1.0.2.ebuild:
  x86 stable.

*imake-1.0.2 (20 May 2006)

  20 May 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -files/0128_all_4.2.0-imake-tmpdir-v2.patch, -imake-1.0.1.ebuild,
  -imake-1.0.1-r1.ebuild, +imake-1.0.2.ebuild:
  Bump. Incorporates 0128_all_4.2.0-imake-tmpdir-v2.patch, finally -- years
  after azarah wrote it.

  09 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> imake-1.0.1-r1.ebuild:
  Add ~x86-fbsd keyword.

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> imake-1.0.1.ebuild,
  imake-1.0.1-r1.ebuild:
  Added ~ppc64

*imake-1.0.1-r1 (22 Jan 2006)

  22 Jan 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +files/0128_all_4.2.0-imake-tmpdir-v2.patch, +imake-1.0.1-r1.ebuild:
  Allow an alternate to /tmp to be specified so that imake works if /tmp is