@@ -1,4 +1,6 @@
 DIST imake-1.0.2.tar.bz2 112959 RMD160 e440ee22baca33d2831a3ecb8453dca43b3d862e SHA1 863a1015af41149e91a2f4b20858cb5d584c6943 SHA256 97cefff4ae76863ebce87496aca715371890505db4a0511d980e92bfe050ac7b
+DIST imake-1.0.3.tar.bz2 139230 RMD160 5cbd5f23fc8360a10cb36c367405f5950443349d SHA1 625a974dd0fe4c4e9d7ec036fc7b079ec05185f1 SHA256 90015244dd7a32594162d2be6e934a258894d1ca2c37422ef727a7f1c0b553ea
 EBUILD imake-1.0.2.ebuild 759 RMD160 687dfce4afcc3074c74e07c749b7fb4cd13edac6 SHA1 ce4d1799566b47204d78b67233f86e8720d6fd14 SHA256 22e99ab9b1f3c7afa5700c7c6b3aa46e28283fb5f5e4a3d00abb68722eb498d4
-MISC ChangeLog 3562 RMD160 58c9eebdf3ab6b1a5cb99090f43eabe9bfcf77d6 SHA1 bd66dc3622604e83557537b85c72782d7b515a40 SHA256 0b1ba488e8e6a09c838722de566a69b20de707739f92185a2114a5d362ea2c85
+EBUILD imake-1.0.3.ebuild 697 RMD160 408ab08c4a3696b77834d85fa6d6102fe92708c4 SHA1 703a62409a543f8f62533f4407dbf488f33cfd91 SHA256 4564b37a234899010aafea850cf7e3e0a99508afea6635f024f48a2b858a67cf
+MISC ChangeLog 3679 RMD160 aa40d6f2f1ac0e3f39c9a6b9ddef0bcd3d74bca2 SHA1 ea0d3a936fff45c1910328abe82c508f6bf19301 SHA256 46fc5d7d75a8c39ededa37ac2b707455aa408675730ec38c3471f465e1d48c3e
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
